Added name and category query parameter filters to GetAll method and changed the name of the method to GetByFilters
